--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-body{
-    display: flex;
-    justify-content: center;
-}
-.calculatorContainer{
+  body {
+      background-color: #121212;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+.calculadora{
 
    display: flex;
     height: 100vh;
@@ -13,7 +18,7 @@ body{
     flex-direction: column;
     align-items: center;
 }
-.buttonsContainer{
+.botones{
     display: grid;
     grid-template-columns:repeat(5, 1fr);
     background-color: rgb(32, 146, 102);
@@ -28,15 +33,32 @@ button{
     flex-direction: column;
 
 }
-.calculatorDisplay{
-    justify-self: center;
-    background-color: rgb(75, 77, 78);
-    width: 70%;
-    height: 10vh;
-    margin: 1rem;
-    text-align: center;
-    padding-top: 2rem;;
-}
+button:hover {
+    background-color: #444;
+  }
+
+
+
+  .equalButton {
+    background-color: #009999;
+    grid-column: span 2;
+  }
+
+  .cabutton {
+    background-color: #cc0000;
+    color: #fff;}
+
+#pantalla {
+    background-color: #000;
+    color: #00ffcc;
+    font-size: 2.5em;
+    padding: 20px;
+    text-align: right;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    height: 60px;
+    overflow: hidden;
+  }
 .oneButton{
 grid-row: 2/3;
 grid-column: 1/2;
@@ -95,7 +117,7 @@ grid-column: 1/2;
     grid-column:2/3;   
 }
 .equalButton{
-    grid-column: 3/6;
+    grid-column: 4/6;
     grid-row:4/5 ;
   
 }
